--- a/initial_nb.ipynb
+++ b/initial_nb.ipynb
@@ -20,11 +20,389 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8ef77952-180e-4e59-aeb9-d179bf3e7b5f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b4968ead-e558-4e11-b1f1-a5670d2c53e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(r'cell2celltrain.csv', delimiter = \",\",  header = 0, index_col = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "89420896-a0f4-43d7-bbe4-80b275c9c6af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(51047, 57)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1e87dfc8-c60d-4bd2-b3c4-e2ccbdcebde1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 51047 entries, 3000002 to 3399994\n",
+      "Data columns (total 57 columns):\n",
+      " #   Column                     Non-Null Count  Dtype  \n",
+      "---  ------                     --------------  -----  \n",
+      " 0   Churn                      51047 non-null  object \n",
+      " 1   MonthlyRevenue             50891 non-null  float64\n",
+      " 2   MonthlyMinutes             50891 non-null  float64\n",
+      " 3   TotalRecurringCharge       50891 non-null  float64\n",
+      " 4   DirectorAssistedCalls      50891 non-null  float64\n",
+      " 5   OverageMinutes             50891 non-null  float64\n",
+      " 6   RoamingCalls               50891 non-null  float64\n",
+      " 7   PercChangeMinutes          50680 non-null  float64\n",
+      " 8   PercChangeRevenues         50680 non-null  float64\n",
+      " 9   DroppedCalls               51047 non-null  float64\n",
+      " 10  BlockedCalls               51047 non-null  float64\n",
+      " 11  UnansweredCalls            51047 non-null  float64\n",
+      " 12  CustomerCareCalls          51047 non-null  float64\n",
+      " 13  ThreewayCalls              51047 non-null  float64\n",
+      " 14  ReceivedCalls              51047 non-null  float64\n",
+      " 15  OutboundCalls              51047 non-null  float64\n",
+      " 16  InboundCalls               51047 non-null  float64\n",
+      " 17  PeakCallsInOut             51047 non-null  float64\n",
+      " 18  OffPeakCallsInOut          51047 non-null  float64\n",
+      " 19  DroppedBlockedCalls        51047 non-null  float64\n",
+      " 20  CallForwardingCalls        51047 non-null  float64\n",
+      " 21  CallWaitingCalls           51047 non-null  float64\n",
+      " 22  MonthsInService            51047 non-null  int64  \n",
+      " 23  UniqueSubs                 51047 non-null  int64  \n",
+      " 24  ActiveSubs                 51047 non-null  int64  \n",
+      " 25  ServiceArea                51023 non-null  object \n",
+      " 26  Handsets                   51046 non-null  float64\n",
+      " 27  HandsetModels              51046 non-null  float64\n",
+      " 28  CurrentEquipmentDays       51046 non-null  float64\n",
+      " 29  AgeHH1                     50138 non-null  float64\n",
+      " 30  AgeHH2                     50138 non-null  float64\n",
+      " 31  ChildrenInHH               51047 non-null  object \n",
+      " 32  HandsetRefurbished         51047 non-null  object \n",
+      " 33  HandsetWebCapable          51047 non-null  object \n",
+      " 34  TruckOwner                 51047 non-null  object \n",
+      " 35  RVOwner                    51047 non-null  object \n",
+      " 36  Homeownership              51047 non-null  object \n",
+      " 37  BuysViaMailOrder           51047 non-null  object \n",
+      " 38  RespondsToMailOffers       51047 non-null  object \n",
+      " 39  OptOutMailings             51047 non-null  object \n",
+      " 40  NonUSTravel                51047 non-null  object \n",
+      " 41  OwnsComputer               51047 non-null  object \n",
+      " 42  HasCreditCard              51047 non-null  object \n",
+      " 43  RetentionCalls             51047 non-null  int64  \n",
+      " 44  RetentionOffersAccepted    51047 non-null  int64  \n",
+      " 45  NewCellphoneUser           51047 non-null  object \n",
+      " 46  NotNewCellphoneUser        51047 non-null  object \n",
+      " 47  ReferralsMadeBySubscriber  51047 non-null  int64  \n",
+      " 48  IncomeGroup                51047 non-null  int64  \n",
+      " 49  OwnsMotorcycle             51047 non-null  object \n",
+      " 50  AdjustmentsToCreditRating  51047 non-null  int64  \n",
+      " 51  HandsetPrice               51047 non-null  object \n",
+      " 52  MadeCallToRetentionTeam    51047 non-null  object \n",
+      " 53  CreditRating               51047 non-null  object \n",
+      " 54  PrizmCode                  51047 non-null  object \n",
+      " 55  Occupation                 51047 non-null  object \n",
+      " 56  MaritalStatus              51047 non-null  object \n",
+      "dtypes: float64(26), int64(8), object(23)\n",
+      "memory usage: 22.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bb586b7c-793f-4454-8036-d6a4270d5e79",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Churn</th>\n",
+       "      <th>MonthlyRevenue</th>\n",
+       "      <th>MonthlyMinutes</th>\n",
+       "      <th>TotalRecurringCharge</th>\n",
+       "      <th>DirectorAssistedCalls</th>\n",
+       "      <th>OverageMinutes</th>\n",
+       "      <th>RoamingCalls</th>\n",
+       "      <th>PercChangeMinutes</th>\n",
+       "      <th>PercChangeRevenues</th>\n",
+       "      <th>DroppedCalls</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ReferralsMadeBySubscriber</th>\n",
+       "      <th>IncomeGroup</th>\n",
+       "      <th>OwnsMotorcycle</th>\n",
+       "      <th>AdjustmentsToCreditRating</th>\n",
+       "      <th>HandsetPrice</th>\n",
+       "      <th>MadeCallToRetentionTeam</th>\n",
+       "      <th>CreditRating</th>\n",
+       "      <th>PrizmCode</th>\n",
+       "      <th>Occupation</th>\n",
+       "      <th>MaritalStatus</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3000002</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>24.00</td>\n",
+       "      <td>219.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-157.0</td>\n",
+       "      <td>-19.0</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1-Highest</td>\n",
+       "      <td>Suburban</td>\n",
+       "      <td>Professional</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3000010</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>16.99</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>No</td>\n",
+       "      <td>4-Medium</td>\n",
+       "      <td>Suburban</td>\n",
+       "      <td>Professional</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3000014</th>\n",
+       "      <td>No</td>\n",
+       "      <td>38.00</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>No</td>\n",
+       "      <td>3-Good</td>\n",
+       "      <td>Town</td>\n",
+       "      <td>Crafts</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3000022</th>\n",
+       "      <td>No</td>\n",
+       "      <td>82.28</td>\n",
+       "      <td>1312.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>1.24</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>157.0</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>No</td>\n",
+       "      <td>4-Medium</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3000026</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>17.14</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1-Highest</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Professional</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 57 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Churn  MonthlyRevenue  MonthlyMinutes  TotalRecurringCharge  \\\n",
+       "CustomerID                                                               \n",
+       "3000002      Yes           24.00           219.0                  22.0   \n",
+       "3000010      Yes           16.99            10.0                  17.0   \n",
+       "3000014       No           38.00             8.0                  38.0   \n",
+       "3000022       No           82.28          1312.0                  75.0   \n",
+       "3000026      Yes           17.14             0.0                  17.0   \n",
+       "\n",
+       "            DirectorAssistedCalls  OverageMinutes  RoamingCalls  \\\n",
+       "CustomerID                                                        \n",
+       "3000002                      0.25             0.0           0.0   \n",
+       "3000010                      0.00             0.0           0.0   \n",
+       "3000014                      0.00             0.0           0.0   \n",
+       "3000022                      1.24             0.0           0.0   \n",
+       "3000026                      0.00             0.0           0.0   \n",
+       "\n",
+       "            PercChangeMinutes  PercChangeRevenues  DroppedCalls  ...  \\\n",
+       "CustomerID                                                       ...   \n",
+       "3000002                -157.0               -19.0           0.7  ...   \n",
+       "3000010                  -4.0                 0.0           0.3  ...   \n",
+       "3000014                  -2.0                 0.0           0.0  ...   \n",
+       "3000022                 157.0                 8.1          52.0  ...   \n",
+       "3000026                   0.0                -0.2           0.0  ...   \n",
+       "\n",
+       "            ReferralsMadeBySubscriber  IncomeGroup  OwnsMotorcycle  \\\n",
+       "CustomerID                                                           \n",
+       "3000002                             0            4              No   \n",
+       "3000010                             0            5              No   \n",
+       "3000014                             0            6              No   \n",
+       "3000022                             0            6              No   \n",
+       "3000026                             0            9              No   \n",
+       "\n",
+       "            AdjustmentsToCreditRating  HandsetPrice  MadeCallToRetentionTeam  \\\n",
+       "CustomerID                                                                     \n",
+       "3000002                             0            30                      Yes   \n",
+       "3000010                             0            30                       No   \n",
+       "3000014                             0       Unknown                       No   \n",
+       "3000022                             0            10                       No   \n",
+       "3000026                             1            10                       No   \n",
+       "\n",
+       "            CreditRating  PrizmCode    Occupation  MaritalStatus  \n",
+       "CustomerID                                                        \n",
+       "3000002        1-Highest   Suburban  Professional             No  \n",
+       "3000010         4-Medium   Suburban  Professional            Yes  \n",
+       "3000014           3-Good       Town        Crafts            Yes  \n",
+       "3000022         4-Medium      Other         Other             No  \n",
+       "3000026        1-Highest      Other  Professional            Yes  \n",
+       "\n",
+       "[5 rows x 57 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
   },
   {
    "cell_type": "markdown",
