added dataset directory to .gitignore

--- a/initial_nb.ipynb
+++ b/initial_nb.ipynb
@@ -64,7 +64,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "1e87dfc8-c60d-4bd2-b3c4-e2ccbdcebde1",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -413,9 +415,108 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "24ce067f-f074-43e8-a1f7-803ea7da66dd",
+   "metadata": {},
+   "source": [
+    "<b>checking if there are rows that contain empty enteries</b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1f25753b-f48b-4f62-97c7-f70dc0d0f968",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all rows: (51047, 57)\n",
+      "rows without missing data: (49752, 57)\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows_without_missing_data = data.dropna()\n",
+    "\n",
+    "print(f\"all rows: {data.shape}\") \n",
+    "print(f\"rows without missing data: {rows_without_missing_data.shape}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a3147a66-a8b7-48a7-8a57-293befe5170d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rows_w_missing_data=data.shape[0]-rows_without_missing_data.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d80d9d91-9156-4cd9-9694-03bc466b0da9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1295"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rows_w_missing_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "461d7dd4-a0d5-41ee-9e5b-ddf9a9182f75",
+   "metadata": {},
+   "source": [
+    "<b>checking that values of dependent variable (Churn) contains only either Yes or No  </b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "77afc99d-5053-441e-ab20-2bcff294d309",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Yes', 'No'], dtype=object)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Churn'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9136a58-aa2f-486c-a953-024708ace571",
+   "metadata": {},
+   "source": [
+    "<b> Confirmed. no mistakes in data entry for this Class</b>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f25753b-f48b-4f62-97c7-f70dc0d0f968",
+   "id": "08f50087-bc20-4c36-9237-226bd2413bf3",
    "metadata": {},
    "outputs": [],
    "source": []
