confirmed that marital status is correctly changed

--- a/initial_nb.ipynb
+++ b/initial_nb.ipynb
@@ -1862,6 +1862,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f80f3a51-69b8-4799-9e2e-97c73ea84913",
+   "metadata": {},
+   "source": [
+    "<b> regarding MartialStatus, changing its datatype to category, where unknown category is Nan</b>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 64,
    "id": "91b816c4-a06f-42c8-8434-dc35e6da73fe",
@@ -1925,7 +1933,9 @@
    "id": "8b3bafd5-cab4-4f7b-8e64-8ffdfee334e4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data['MaritalStatus'].head(10)"
+   ]
   }
  ],
  "metadata": {
