changing datatype of PrizmCode and Occupation to categorical

--- a/initial_nb.ipynb
+++ b/initial_nb.ipynb
@@ -1866,7 +1866,7 @@
    "id": "f80f3a51-69b8-4799-9e2e-97c73ea84913",
    "metadata": {},
    "source": [
-    "<b> regarding MartialStatus, changing its datatype to category, where unknown category is Nan</b>"
+    "<b> regarding MaritalStatus, changing its datatype to category, where unknown category is Nan</b>"
    ]
   },
   {
@@ -1929,12 +1929,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "8b3bafd5-cab4-4f7b-8e64-8ffdfee334e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CustomerID\n",
+       "3317674    Unknown\n",
+       "3115366        Yes\n",
+       "3328014        Yes\n",
+       "3278106    Unknown\n",
+       "3373118         No\n",
+       "3256878         No\n",
+       "3330710        Yes\n",
+       "3126414        Yes\n",
+       "3251238        Yes\n",
+       "3304406    Unknown\n",
+       "Name: MaritalStatus, dtype: category\n",
+       "Categories (3, object): ['No', 'Unknown', 'Yes']"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['MaritalStatus'].sample(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "12ea096d-4655-4f0d-acda-7b822cbf47b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ServiceArea: 748\n",
+      "sample: ['SEAPOR503' 'PITHOM412' 'MILMIL414' 'OKCTUL918' 'OKCOKC405' 'SANMCA210'\n",
+      " 'SLCSLC801' 'LOULOU502' 'KCYKCK913' 'KCYNEW316' 'KCYKCM816' 'DENDEN303'\n",
+      " 'PHICTR610' 'OKCLRK501' 'OMADES515' 'SANAUS512' 'KCYWIC316' 'INDIND317'\n",
+      " 'SLCPRO801' 'OMALNC402' 'NSHNSH615' 'OMAOMA402' 'PHXTUC520' 'DALDAL214'\n",
+      " 'DALDTN940' 'DALFTW817' 'SANSAN210' 'NYCMAN917' 'NOLKEN504' 'MINMIN612'\n",
+      " 'NNYROC716' 'PHIARD610' 'NYCQUE917' 'DENBOU303' 'BOSBOS617' 'PHXPHX602'\n",
+      " 'NNYBUF716' 'DETTOL419' 'NNYSYR315' 'STLSTL314' 'PHIPHI215' 'SEABLV425'\n",
+      " 'MIAMIA305' 'PHICHC215' 'SEASEA206' 'BIRBIR205' 'MIADFD954' 'LOUNAL812'\n",
+      " 'MIADEL561' 'MIAFTL954' 'SEASPO509' 'SEATAC253' 'SFRSAC916' 'MIANDA305'\n",
+      " 'MINSTP612' 'MIAHWD954' 'NYCBRO917' 'PHIJEN215' 'OMACDR319' 'MIAWPB561'\n",
+      " 'SEAOLY360' 'PITBUT412' 'SEAEVE425' 'PHIMER609' 'SEACDA208' 'HARHAR860'\n",
+      " 'SFRSFR415' 'SFROAK510' 'SFRSCL408' 'NNYALB518' 'STLCOL618' 'NYCNEW201'\n",
+      " 'SFRPAL650' 'DETDET313' 'DETROS810' 'NYCNEW908' 'NYCNAS516' 'NSHCOL615'\n",
+      " 'PITGRE412' 'SEABEA503' 'NYCSUF516' 'MIAMAR305' 'HARNOR203' 'SANSMC512'\n",
+      " 'SFRSMO650' 'PHIMUL609' 'NYCWHI914' 'DETPON248' 'BOSPRO401' 'SANGEO512'\n",
+      " 'DETANN734' 'BOSMAN603' 'PHIAVD610' 'DETWYN734' 'SFRSRO707' 'PHITRT609'\n",
+      " 'SLCKAY801' 'PITGIB412' 'OKCCON501' 'BOSBOS781' 'SEAEUG541' 'APCFCH703'\n",
+      " 'APCSIL301' 'SANCRP512' 'SEAVAN360' 'LOULEX606' 'HARWAT203' 'NYCNEW973'\n",
+      " 'PHIWIL302' 'DALDEN903' 'APCWAS202' 'PITCOR412' 'HARNEW203' 'SFROAK925'\n",
+      " 'SFRSFS650' 'MIAFTM941' 'OMAIWC319' 'APCBAL410' 'BOSPTL207' 'MIAKEY305'\n",
+      " 'NYCNEW732' 'DALSHR903' 'LOUFRK502' 'MIANAP941' 'DENGLD303' 'DETMON734'\n",
+      " 'BOSBOS978' 'MIAPSL561' 'KCYLAW913' 'NNYPOU914' 'MIABON941' 'HARSPR413'\n",
+      " 'SEACOR541' nan 'FLNJAC904' 'MIAPOR941' 'FLNORL407' 'FLNTAL850'\n",
+      " 'FLNGAN352' 'MIAVER561' 'INDMUN765' 'PITMON412' 'NEVLVS702' 'FLNSAN407'\n",
+      " 'FLNTAM813' 'FLNCLR813' 'KCYHUT316' 'HARLON860' 'OHICIN513' 'OHICOL614'\n",
+      " 'ATLCHA423' 'FLNLEE352' 'OHIDAY937' 'FLNSAR941' 'NCRRAL919' 'FLNDAY904'\n",
+      " 'FLNKIS407' 'ATLMEM901' 'HOUHOU281' 'ATLKNO423' 'HOUGLV409' 'NCRGRE336'\n",
+      " 'LOUCOR812' 'HOUBRN409' 'OHICOV606' 'FLNOCA352' 'NCRCRY919' 'NCRCHA704'\n",
+      " 'DENGRE970' 'FLNNPR813' 'APCANN443' 'HOUCON409' 'KCYTOP913' 'SEASAL503'\n",
+      " 'FLNWNH941' 'OHINEW740' 'OHILAN740' 'BOSFRA508' 'DENCOL719' 'BOSBOS508'\n",
+      " 'DENFTC970' 'OMAAMS515' 'NCRFAY910' 'OKCBEN501' 'ATLALB912' 'SEAABN253'\n",
+      " 'PITIND724' 'FLNSAG904' 'SEALVW360' 'ATLANE678' 'CHICHI312' 'FLNCOC407'\n",
+      " 'CHILAG630' 'CHINBK847' 'SFUSAC530' 'OHICLE216' 'ATLATL678' 'CHICHI773'\n",
+      " 'BOSWOR508' 'SLCPRK435' 'CHILAG708' 'OHIAKR330' 'OHIYNG330' 'APCSVP443'\n",
+      " 'DALGVL940' 'ATLROS678' 'PITROC412' 'ATLNOR678' 'ATLATH706' 'ATLJCK901'\n",
+      " 'OHISGF937' 'OHICAN330' 'DENVAL970' 'OHIELY440' 'OHIWAR330' 'OHILRN440'\n",
+      " 'STLCMB573' 'CHIJOL815' 'HWIHON808' 'ATLDAL334' 'OHILAW812' 'NCRRIC804'\n",
+      " 'MIAJUP561' 'FLNLAK941' 'NCRGRB757' 'SEAALB541' 'OHIDEL740' 'HWIMAU808'\n",
+      " 'PITWAS412' 'STLJEF573' 'APCFRD301' 'NCRNWN757' 'OHIMAN419' 'OHIPSV440'\n",
+      " 'LOUETN502' 'NCRWLM757' 'MIASUG305' 'ATLTUN601' 'OHIMED330' 'ATLMAC912'\n",
+      " 'KCYELD316' 'MILKEN414' 'SEACHE360' 'CHIRCK815' 'FLNOGC904' 'LAXCDG310'\n",
+      " 'LAXRIV909' 'FLNBRD941' 'NEVSDG619' 'LAXANA714' 'NEVENC760' 'LAXSAN714'\n",
+      " 'LAXMON323' 'LAXBUR818' 'LAXCOR909' 'NEVELC619' 'HOULJK409' 'NEVCHU619'\n",
+      " 'CHIGRY219' 'NYCPLS609' 'LAXBEV310' 'LAXIRV949' 'LAXLAX213' 'LAXVNY818'\n",
+      " 'LAXSFN818' 'NEVESC760' 'LAXONT909' 'LAXSBN909' 'LAXDOW562' 'NMXLAR956'\n",
+      " 'LAXALB626' 'FLNWNP407' 'LAXLAG949' 'OHIMRY937' 'LAXSMN310' 'LAXPAS626'\n",
+      " 'NEVPOW619' 'PHIELK443' 'DENDIL970' 'SLCTOO801' 'NCRDUR919' 'NCRPTR804'\n",
+      " 'OKCARD580' 'NCRSPN910' 'MILRAC414' 'NMXELP915' 'HOUFRE409' 'SLCOGD801'\n",
+      " 'LAXCOV626' 'OMANEW515' 'DETFLI810' 'NEVOCN760' 'PITCAR412' 'OHIBER440'\n",
+      " 'NEVLMS619' 'LAXLAX323' 'ATLCOL706' 'NMXLUB806' 'SEAMTV360' 'LAXALA562'\n",
+      " 'PHIDOV302' 'NCRPOR757' 'HOUSPR832' 'NCRVIR757' 'NMXAMA806' 'OHIWOO330'\n",
+      " 'OKCWIC940' 'NMXTER915' 'NMXLCR505' 'LAXOAK805' 'HARBRI203' 'NYCCIT914'\n",
+      " 'OKCFTS501' 'OKCSTW405' 'ATLSWT423' 'PITNEW412' 'PHIMID302' 'STLFUL573'\n",
+      " 'NCRMID704' 'NMXALB505' 'OHIAUR330' 'OKCLAW580' 'NCRCHE757' 'HOUBMT409'\n",
+      " 'NYCMTK914' 'SHEWIN540' 'APCEAS443' 'SHEEDI540' 'SHEHAG301' 'SDASFL605'\n",
+      " 'SHEMAR304' 'SHEMYE301' 'PHIPLS609' 'OKCCHC405' 'APCSAL443' 'SHECHA717'\n",
+      " 'NCRWIN336' 'NMXABI915' 'CHIDAV319' 'MILMAD608' 'LAXPSG760' 'SEASIL360'\n",
+      " 'CHICPT219' 'PHICAM302' 'CHIBLO309' 'ATLDTN706' 'DETBWG419' 'NMXSAN505'\n",
+      " 'SHEHAR540' 'NCRWAK919' 'OHITRT937' 'NYCTMR732' 'NYCKPT732' 'NMXSAN915'\n",
+      " 'NYCFHD732' 'OHISAN419' 'OKCMAN785' 'BOSNSH603' 'AIRGRE864' 'NCRCON704'\n",
+      " 'AIRASH828' 'PITFOR412' 'MILWAU262' 'PHXGLE623' 'PHXSCO480' 'SDABRK605'\n",
+      " 'SHEFTR540' 'ATLATN423' 'FLNSMY904' 'CHISPR217' 'AIRAND864' 'PITMNG412'\n",
+      " 'AIRHIC828' 'CHIPEO309' 'NYCETT732' 'AIRMYR843' 'NMXDEL830' 'LAXLAN661'\n",
+      " 'AIRWIL910' 'APCFRE540' 'AIRROC252' 'OKCBAR918' 'MILJAN608' 'OKCJUN785'\n",
+      " 'FLNPAL904' 'NMXEAG830' 'DETLAN517' 'FLNCRY352' 'AIRCHA843' 'OKCEMP316'\n",
+      " 'DETBAT616' 'OKCCAB501' 'PITWHE304' 'ATLDOT334' 'STLJOS816' 'AIRAUG706'\n",
+      " 'DETKAL616' 'AIRCOL803' 'OKCFAY501' 'OKCMCP316' 'LAXCUL310' 'MIAOKE863'\n",
+      " 'AIRSPA864' 'DETJAC517' 'FLNSTK904' 'AIRSAV912' 'CHICHA217' 'OKCBTN501'\n",
+      " 'NYCPLA908' 'LAXVIC760' 'AIRROA252' 'AIRGOL919' 'FLNAVO863' 'NMXLSA505'\n",
+      " 'FLNSEB863' 'OHIXEN937' 'APCLEE703' 'AIRAIK803' 'PHIWLW609' 'STLCHA636'\n",
+      " 'PHIMIV856' 'STLCHE636' 'FLNINV352' 'SFRWOO530' 'OKCMCA918' 'LAUJAC601'\n",
+      " 'OHIASH419' 'AIRGRN252' 'NEVCOR619' 'SDAWTR605' 'SFRDAN925' 'AIRORA803'\n",
+      " 'NYCPAS973' 'INDLAF765' 'OHITRO937' 'APCWAL240' 'SFRCRU831' 'PHICAP609'\n",
+      " 'NORSTC320' 'SANTEM254' 'NEVLAU702' 'HOUHUN936' 'SANREF361' 'NCRKAN704'\n",
+      " 'LAXOXN805' 'NCRMON704' 'AIRFLO843' 'HOUANG409' 'MILJNC920' 'ATLCHN706'\n",
+      " 'FLNFRN904' 'NCRHAR704' 'SFRROC916' 'OHIPIQ937' 'OMAGRN515' 'LAXING310'\n",
+      " 'AIRJAC910' 'LAXSIM805' 'PHISAL856' 'DETFER248' 'SANKIL254' 'OKCEND580'\n",
+      " 'OHIKEN330' 'PITUNT412' 'DETSOU248' 'APCWES443' 'LAXVEN805' 'NMXPLA806'\n",
+      " 'OKCMUS918' 'CHIDEC217' 'MILWAT920' 'MILLAK262' 'LAXCAN661' 'PHIGEO302'\n",
+      " 'FLNEUS352' 'AIRWIN252' 'AIRSUM803' 'SANFRE830' 'OHIHAR330' 'ATLLAG706'\n",
+      " 'ATHJHC423' 'FLNZEP813' 'ATHKIN423' 'FLNBEL352' 'SFRDSR925' 'NYCWOO732'\n",
+      " 'NCRGST704' 'INDCIC317' 'OHIMAR740' 'NORROC507' 'DETTRO248' 'DALATH903'\n",
+      " 'AIRGWD864' 'FLNBAR863' 'MIABEL561' 'DALMNW940' 'STLOZA573' 'OHINOR419'\n",
+      " 'SEWWAL509' 'KCYWAR660' 'OHIMID513' 'SANCOC254' 'SEWKEN509' 'SEWPAS509'\n",
+      " 'DALSLS903' 'OHIALL330' 'OHINCA937' 'OHHPAR304' 'OHHZAN740' 'OHHCHI740'\n",
+      " 'OHHPOR740' 'OHHCAM740' 'OHHMTA740' 'OHHWAV740' 'OHHJAC740' 'OHHATH740'\n",
+      " 'OHHGAL740' 'MILBEL608' 'STLSED660' 'NCRYOR803' 'NOLBOG504' 'ATHLIM423'\n",
+      " 'SANGIL830' 'SANLAM512' 'NCRCLA919' 'SEWYAK509' 'INHCRI419' 'FLNBSH352'\n",
+      " 'CHIROC309' 'INHVNW419' 'SEWGTP541' 'SFRSGS530' 'NEVNAT619' 'OHIOXF513'\n",
+      " 'BIRJAS205' 'INHFTW219' 'LAXSJC949' 'SEWMED541' 'NMCPUE719' 'FLNLKP863'\n",
+      " 'MINCOR763' 'ATLVAL229' 'PHILAN717' 'IPMGDR616' 'OHIOBE440' 'AIRGAF864'\n",
+      " 'AIRELI252' 'DALCOM903' 'DETFRE419' 'DALSTV254' 'STLSPR417' 'FLNLKW863'\n",
+      " 'INDFRA765' 'SEWROS541' 'NVUREN775' 'SFRWTV831' 'AIRMOR828' 'OHICLB330'\n",
+      " 'AIRNWB252' 'AIRWYV828' 'NCRPIT919' 'AWIAPP920' 'AWIGRE920' 'DALMVN903'\n",
+      " 'INDCRA765' 'AWIFON920' 'ATLOPE334' 'NORDUL218' 'NVUGAR775' 'AIRBEA843'\n",
+      " 'SEWSUN509' 'NCRSMF757' 'LAXWES310' 'INHBLU419' 'OHILEB513' 'SEABLG360'\n",
+      " 'OKCSAL785' 'KCYLEA913' 'AWIOSH920' 'NYCJER201' 'INHSBN219' 'NCRROC803'\n",
+      " 'SEWPRO509' 'OHICIR740' 'AWISHE920' 'INDCLO765' 'NCRASH336' 'AIRCAM803'\n",
+      " 'LAUCLM662' 'SEAOKH360' 'SEWPEN541' 'SEAMON503' 'APCBEL443' 'PHIVIN609'\n",
+      " 'DALGRE903' 'NMXFLA520' 'LAXCAS661' 'LAXIND760' 'INDAND765' 'SANWOO361'\n",
+      " 'DALCRS903' 'LAXSNP310' 'NORZIM763' 'INHDFN419' 'PHIRDN484' 'KCYCLI660'\n",
+      " 'KCYOTW785' 'NOROWT507' 'BOSHYA508' 'PHIALL484' 'FLNWAU863' 'NCRALB704'\n",
+      " 'ATHHAM423' 'NNYUTI315' 'AIRMAR828' 'FLNKEH352' 'MILLKM920' 'BIRPEL205'\n",
+      " 'ATLOVB601' 'NORMAN507' 'FLNKEN321' 'FLNHNC863' 'PITSOM814' 'IPMMID517'\n",
+      " 'STLJOP417' 'NCRHEN252' 'CHILAS815' 'FLNLKC904' 'FLNARC863' 'ATLBRU912'\n",
+      " 'DETNOR248' 'NORRDW651' 'LAUTUP662' 'AIRNEW803' 'AIRGEO843' 'NCRSMI919'\n",
+      " 'FLNWIL352' 'MILBUR262' 'NCRSHE704' 'KCYHES316' 'HOUVIC361' 'MINBLO952'\n",
+      " 'SEWMLF541' 'NCRSIC919' 'OHIRAV330' 'NSHSPR615' 'IPMSAG517' 'SEWKHF541'\n",
+      " 'CHIKAN815' 'NMXPRE520' 'KCYHNV816' 'STLROL573' 'PHIBRI856' 'DETWAS419'\n",
+      " 'NORFRM218' 'NCROXF919' 'AIRKIN252' 'SFRCBL408' 'AWIMAN920' 'PHIMIL302'\n",
+      " 'OHIWIL937' 'NCRSAL704' 'NMCGDJ970' 'DALKAU469' 'SFRWLC925' 'NOLPIC601'\n",
+      " 'STLCPG573' 'SFRCON925' 'DETADR517' 'OHIMTV740' 'DETBNH616' 'STLCRD618'\n",
+      " 'STLHNB573' 'NOLPOH504' 'NMXYUM520' 'STLQUI217' 'LAUHAT601' 'SFRHAY510'\n",
+      " 'ATLPRR478' 'ATLDBL478' 'NNYBUR914' 'CHIMTV618' 'LAUGNW662' 'SHEYOR717'\n",
+      " 'SANROM956' 'NORALX320' 'IPMHOL616' 'LAXPER909' 'SANKER830' 'OHIBCY419'\n",
+      " 'SHECAR717' 'NORFAR701' 'NCRLUM910' 'NCRHGP336' 'INHCEL419' 'CHIWAT319'\n",
+      " 'SEWHDR541' 'ATLMDV478' 'ATLWMP870' 'AIRHHI843' 'BOSBRA781' 'PITWEI304'\n",
+      " 'SFURED530' 'VAHRAD540' 'VAHROA540' 'VAHWAY540' 'VAHCHL804' 'VAHLYN804'\n",
+      " 'VAHMTN540' 'VAHDAN804' 'VAHSTA540' 'OHIBUT419' 'NCRMIL803' 'CHIDEK815'\n",
+      " 'LAUBRO601' 'STLPIT316' 'INHHIC419' 'HOPNAN570' 'APCWAR540' 'NCRSAN919'\n",
+      " 'SEALEW208' 'PHISCR717' 'INHFIN419' 'INUEVA812' 'APCLXT240' 'SEABOI208'\n",
+      " 'OHHFAI304' 'OHHMOR304' 'OHHCHA304' 'OHHASH606' 'OHHHUN304' 'OHHCLA304'\n",
+      " 'NORFER218' 'SEADAL503' 'SFRFAI707' 'ATLSEN662' 'GCWBTR225' 'GCWLAF337'\n",
+      " 'GCWGUL228' 'APCBET240' 'STLPRB573' 'SFRVAC707' 'SFRRCM510' 'INHKOK765'\n",
+      " 'LAWBUM409' 'SLUSTG435' 'LAUNAT601' 'NCRDNN910']\n",
+      "----------------------------------------------------------------\n",
+      "HandsetPrice: 16\n",
+      "sample: ['30' 'Unknown' '10' '80' '150' '300' '40' '200' '100' '130' '60' '400'\n",
+      " '240' '250' '180' '500']\n",
+      "----------------------------------------------------------------\n",
+      "CreditRating: 7\n",
+      "sample: ['1-Highest' '4-Medium' '3-Good' '6-VeryLow' '2-High' '5-Low' '7-Lowest']\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "for column in data.columns:\n",
+    "    if data.dtypes[column] == 'object':\n",
+    "        print(f\"{column}: {len(data[column].unique())}\")\n",
+    "        print(f\"sample: {data[column].unique()}\")\n",
+    "        print(\"----------------------------------------------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "115ad7b9-4cc8-46ae-b5ff-866f44c5f174",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['MaritalStatus'].head(10)"
+    "#changing the features that have finite set of values to categorical\n",
+    "\n",
+    "data['PrizmCode'] = data['PrizmCode'].astype('category')\n",
+    "data['Occupation'] = data['Occupation'].astype('category')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a6ff55f-98f4-4797-97ac-999f9fdb21bf",
+   "metadata": {},
+   "source": [
+    "<b>CreditRating feature seems to be ordinal data</b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "226881bf-fd68-4f47-b5a3-c3591ed74aad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "since we still dont know exactly if this feature will be us"
    ]
   }
  ],
