handle ordinal feature 'CreditRating'

--- a/initial_nb.ipynb
+++ b/initial_nb.ipynb
@@ -2137,14 +2137,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b12147dc-e77c-49ae-bc6b-68f9c46e208a",
+   "metadata": {},
+   "source": [
+    "\n",
+    "since we still dont know exactly if this feature will be used later on and how exactly, seems viable to separate the creditrating feature into 2, one is numerical, and the other is string (categorical)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "226881bf-fd68-4f47-b5a3-c3591ed74aad",
+   "execution_count": 78,
+   "id": "a1194fc1-4307-4fab-b9f7-f27893c3e313",
    "metadata": {},
    "outputs": [],
    "source": [
-    "since we still dont know exactly if this feature will be us"
+    "#Extract numerical part\n",
+    "data['CreditRating_Numeric'] = data['CreditRating'].str[:1] \n",
+    "\n",
+    "#Extract string part\n",
+    "data['CreditRating_Label'] = data['CreditRating'].str[2:] \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "891e742c-87ac-4640-a2a6-0850bfb88e96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['CreditRating_Numeric'] =data['CreditRating_Numeric'].astype('int64')\n",
+    "data['CreditRating_Label'] = data['CreditRating_Label'].astype('category')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7426cd0-264e-457f-94c4-80337d139c05",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
