handled ServiceArea feature,separated areacode from city prefix, and applied Feature Encoding to each

--- a/initial_nb.ipynb
+++ b/initial_nb.ipynb
@@ -1962,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 100,
    "id": "12ea096d-4655-4f0d-acda-7b822cbf47b7",
    "metadata": {},
    "outputs": [
@@ -2097,12 +2097,119 @@
       " 'GCWGUL228' 'APCBET240' 'STLPRB573' 'SFRVAC707' 'SFRRCM510' 'INHKOK765'\n",
       " 'LAWBUM409' 'SLUSTG435' 'LAUNAT601' 'NCRDNN910']\n",
       "----------------------------------------------------------------\n",
-      "HandsetPrice: 16\n",
-      "sample: ['30' 'Unknown' '10' '80' '150' '300' '40' '200' '100' '130' '60' '400'\n",
-      " '240' '250' '180' '500']\n",
+      "City: 737\n",
+      "sample: ['SEAPOR' 'PITHOM' 'MILMIL' 'OKCTUL' 'OKCOKC' 'SANMCA' 'SLCSLC' 'LOULOU'\n",
+      " 'KCYKCK' 'KCYNEW' 'KCYKCM' 'DENDEN' 'PHICTR' 'OKCLRK' 'OMADES' 'SANAUS'\n",
+      " 'KCYWIC' 'INDIND' 'SLCPRO' 'OMALNC' 'NSHNSH' 'OMAOMA' 'PHXTUC' 'DALDAL'\n",
+      " 'DALDTN' 'DALFTW' 'SANSAN' 'NYCMAN' 'NOLKEN' 'MINMIN' 'NNYROC' 'PHIARD'\n",
+      " 'NYCQUE' 'DENBOU' 'BOSBOS' 'PHXPHX' 'NNYBUF' 'DETTOL' 'NNYSYR' 'STLSTL'\n",
+      " 'PHIPHI' 'SEABLV' 'MIAMIA' 'PHICHC' 'SEASEA' 'BIRBIR' 'MIADFD' 'LOUNAL'\n",
+      " 'MIADEL' 'MIAFTL' 'SEASPO' 'SEATAC' 'SFRSAC' 'MIANDA' 'MINSTP' 'MIAHWD'\n",
+      " 'NYCBRO' 'PHIJEN' 'OMACDR' 'MIAWPB' 'SEAOLY' 'PITBUT' 'SEAEVE' 'PHIMER'\n",
+      " 'SEACDA' 'HARHAR' 'SFRSFR' 'SFROAK' 'SFRSCL' 'NNYALB' 'STLCOL' 'NYCNEW'\n",
+      " 'SFRPAL' 'DETDET' 'DETROS' 'NYCNAS' 'NSHCOL' 'PITGRE' 'SEABEA' 'NYCSUF'\n",
+      " 'MIAMAR' 'HARNOR' 'SANSMC' 'SFRSMO' 'PHIMUL' 'NYCWHI' 'DETPON' 'BOSPRO'\n",
+      " 'SANGEO' 'DETANN' 'BOSMAN' 'PHIAVD' 'DETWYN' 'SFRSRO' 'PHITRT' 'SLCKAY'\n",
+      " 'PITGIB' 'OKCCON' 'SEAEUG' 'APCFCH' 'APCSIL' 'SANCRP' 'SEAVAN' 'LOULEX'\n",
+      " 'HARWAT' 'PHIWIL' 'DALDEN' 'APCWAS' 'PITCOR' 'HARNEW' 'SFRSFS' 'MIAFTM'\n",
+      " 'OMAIWC' 'APCBAL' 'BOSPTL' 'MIAKEY' 'DALSHR' 'LOUFRK' 'MIANAP' 'DENGLD'\n",
+      " 'DETMON' 'MIAPSL' 'KCYLAW' 'NNYPOU' 'MIABON' 'HARSPR' 'SEACOR' nan\n",
+      " 'FLNJAC' 'MIAPOR' 'FLNORL' 'FLNTAL' 'FLNGAN' 'MIAVER' 'INDMUN' 'PITMON'\n",
+      " 'NEVLVS' 'FLNSAN' 'FLNTAM' 'FLNCLR' 'KCYHUT' 'HARLON' 'OHICIN' 'OHICOL'\n",
+      " 'ATLCHA' 'FLNLEE' 'OHIDAY' 'FLNSAR' 'NCRRAL' 'FLNDAY' 'FLNKIS' 'ATLMEM'\n",
+      " 'HOUHOU' 'ATLKNO' 'HOUGLV' 'NCRGRE' 'LOUCOR' 'HOUBRN' 'OHICOV' 'FLNOCA'\n",
+      " 'NCRCRY' 'NCRCHA' 'DENGRE' 'FLNNPR' 'APCANN' 'HOUCON' 'KCYTOP' 'SEASAL'\n",
+      " 'FLNWNH' 'OHINEW' 'OHILAN' 'BOSFRA' 'DENCOL' 'DENFTC' 'OMAAMS' 'NCRFAY'\n",
+      " 'OKCBEN' 'ATLALB' 'SEAABN' 'PITIND' 'FLNSAG' 'SEALVW' 'ATLANE' 'CHICHI'\n",
+      " 'FLNCOC' 'CHILAG' 'CHINBK' 'SFUSAC' 'OHICLE' 'ATLATL' 'BOSWOR' 'SLCPRK'\n",
+      " 'OHIAKR' 'OHIYNG' 'APCSVP' 'DALGVL' 'ATLROS' 'PITROC' 'ATLNOR' 'ATLATH'\n",
+      " 'ATLJCK' 'OHISGF' 'OHICAN' 'DENVAL' 'OHIELY' 'OHIWAR' 'OHILRN' 'STLCMB'\n",
+      " 'CHIJOL' 'HWIHON' 'ATLDAL' 'OHILAW' 'NCRRIC' 'MIAJUP' 'FLNLAK' 'NCRGRB'\n",
+      " 'SEAALB' 'OHIDEL' 'HWIMAU' 'PITWAS' 'STLJEF' 'APCFRD' 'NCRNWN' 'OHIMAN'\n",
+      " 'OHIPSV' 'LOUETN' 'NCRWLM' 'MIASUG' 'ATLTUN' 'OHIMED' 'ATLMAC' 'KCYELD'\n",
+      " 'MILKEN' 'SEACHE' 'CHIRCK' 'FLNOGC' 'LAXCDG' 'LAXRIV' 'FLNBRD' 'NEVSDG'\n",
+      " 'LAXANA' 'NEVENC' 'LAXSAN' 'LAXMON' 'LAXBUR' 'LAXCOR' 'NEVELC' 'HOULJK'\n",
+      " 'NEVCHU' 'CHIGRY' 'NYCPLS' 'LAXBEV' 'LAXIRV' 'LAXLAX' 'LAXVNY' 'LAXSFN'\n",
+      " 'NEVESC' 'LAXONT' 'LAXSBN' 'LAXDOW' 'NMXLAR' 'LAXALB' 'FLNWNP' 'LAXLAG'\n",
+      " 'OHIMRY' 'LAXSMN' 'LAXPAS' 'NEVPOW' 'PHIELK' 'DENDIL' 'SLCTOO' 'NCRDUR'\n",
+      " 'NCRPTR' 'OKCARD' 'NCRSPN' 'MILRAC' 'NMXELP' 'HOUFRE' 'SLCOGD' 'LAXCOV'\n",
+      " 'OMANEW' 'DETFLI' 'NEVOCN' 'PITCAR' 'OHIBER' 'NEVLMS' 'ATLCOL' 'NMXLUB'\n",
+      " 'SEAMTV' 'LAXALA' 'PHIDOV' 'NCRPOR' 'HOUSPR' 'NCRVIR' 'NMXAMA' 'OHIWOO'\n",
+      " 'OKCWIC' 'NMXTER' 'NMXLCR' 'LAXOAK' 'HARBRI' 'NYCCIT' 'OKCFTS' 'OKCSTW'\n",
+      " 'ATLSWT' 'PITNEW' 'PHIMID' 'STLFUL' 'NCRMID' 'NMXALB' 'OHIAUR' 'OKCLAW'\n",
+      " 'NCRCHE' 'HOUBMT' 'NYCMTK' 'SHEWIN' 'APCEAS' 'SHEEDI' 'SHEHAG' 'SDASFL'\n",
+      " 'SHEMAR' 'SHEMYE' 'PHIPLS' 'OKCCHC' 'APCSAL' 'SHECHA' 'NCRWIN' 'NMXABI'\n",
+      " 'CHIDAV' 'MILMAD' 'LAXPSG' 'SEASIL' 'CHICPT' 'PHICAM' 'CHIBLO' 'ATLDTN'\n",
+      " 'DETBWG' 'NMXSAN' 'SHEHAR' 'NCRWAK' 'OHITRT' 'NYCTMR' 'NYCKPT' 'NYCFHD'\n",
+      " 'OHISAN' 'OKCMAN' 'BOSNSH' 'AIRGRE' 'NCRCON' 'AIRASH' 'PITFOR' 'MILWAU'\n",
+      " 'PHXGLE' 'PHXSCO' 'SDABRK' 'SHEFTR' 'ATLATN' 'FLNSMY' 'CHISPR' 'AIRAND'\n",
+      " 'PITMNG' 'AIRHIC' 'CHIPEO' 'NYCETT' 'AIRMYR' 'NMXDEL' 'LAXLAN' 'AIRWIL'\n",
+      " 'APCFRE' 'AIRROC' 'OKCBAR' 'MILJAN' 'OKCJUN' 'FLNPAL' 'NMXEAG' 'DETLAN'\n",
+      " 'FLNCRY' 'AIRCHA' 'OKCEMP' 'DETBAT' 'OKCCAB' 'PITWHE' 'ATLDOT' 'STLJOS'\n",
+      " 'AIRAUG' 'DETKAL' 'AIRCOL' 'OKCFAY' 'OKCMCP' 'LAXCUL' 'MIAOKE' 'AIRSPA'\n",
+      " 'DETJAC' 'FLNSTK' 'AIRSAV' 'CHICHA' 'OKCBTN' 'NYCPLA' 'LAXVIC' 'AIRROA'\n",
+      " 'AIRGOL' 'FLNAVO' 'NMXLSA' 'FLNSEB' 'OHIXEN' 'APCLEE' 'AIRAIK' 'PHIWLW'\n",
+      " 'STLCHA' 'PHIMIV' 'STLCHE' 'FLNINV' 'SFRWOO' 'OKCMCA' 'LAUJAC' 'OHIASH'\n",
+      " 'AIRGRN' 'NEVCOR' 'SDAWTR' 'SFRDAN' 'AIRORA' 'NYCPAS' 'INDLAF' 'OHITRO'\n",
+      " 'APCWAL' 'SFRCRU' 'PHICAP' 'NORSTC' 'SANTEM' 'NEVLAU' 'HOUHUN' 'SANREF'\n",
+      " 'NCRKAN' 'LAXOXN' 'NCRMON' 'AIRFLO' 'HOUANG' 'MILJNC' 'ATLCHN' 'FLNFRN'\n",
+      " 'NCRHAR' 'SFRROC' 'OHIPIQ' 'OMAGRN' 'LAXING' 'AIRJAC' 'LAXSIM' 'PHISAL'\n",
+      " 'DETFER' 'SANKIL' 'OKCEND' 'OHIKEN' 'PITUNT' 'DETSOU' 'APCWES' 'LAXVEN'\n",
+      " 'NMXPLA' 'OKCMUS' 'CHIDEC' 'MILWAT' 'MILLAK' 'LAXCAN' 'PHIGEO' 'FLNEUS'\n",
+      " 'AIRWIN' 'AIRSUM' 'SANFRE' 'OHIHAR' 'ATLLAG' 'ATHJHC' 'FLNZEP' 'ATHKIN'\n",
+      " 'FLNBEL' 'SFRDSR' 'NYCWOO' 'NCRGST' 'INDCIC' 'OHIMAR' 'NORROC' 'DETTRO'\n",
+      " 'DALATH' 'AIRGWD' 'FLNBAR' 'MIABEL' 'DALMNW' 'STLOZA' 'OHINOR' 'SEWWAL'\n",
+      " 'KCYWAR' 'OHIMID' 'SANCOC' 'SEWKEN' 'SEWPAS' 'DALSLS' 'OHIALL' 'OHINCA'\n",
+      " 'OHHPAR' 'OHHZAN' 'OHHCHI' 'OHHPOR' 'OHHCAM' 'OHHMTA' 'OHHWAV' 'OHHJAC'\n",
+      " 'OHHATH' 'OHHGAL' 'MILBEL' 'STLSED' 'NCRYOR' 'NOLBOG' 'ATHLIM' 'SANGIL'\n",
+      " 'SANLAM' 'NCRCLA' 'SEWYAK' 'INHCRI' 'FLNBSH' 'CHIROC' 'INHVNW' 'SEWGTP'\n",
+      " 'SFRSGS' 'NEVNAT' 'OHIOXF' 'BIRJAS' 'INHFTW' 'LAXSJC' 'SEWMED' 'NMCPUE'\n",
+      " 'FLNLKP' 'MINCOR' 'ATLVAL' 'PHILAN' 'IPMGDR' 'OHIOBE' 'AIRGAF' 'AIRELI'\n",
+      " 'DALCOM' 'DETFRE' 'DALSTV' 'STLSPR' 'FLNLKW' 'INDFRA' 'SEWROS' 'NVUREN'\n",
+      " 'SFRWTV' 'AIRMOR' 'OHICLB' 'AIRNWB' 'AIRWYV' 'NCRPIT' 'AWIAPP' 'AWIGRE'\n",
+      " 'DALMVN' 'INDCRA' 'AWIFON' 'ATLOPE' 'NORDUL' 'NVUGAR' 'AIRBEA' 'SEWSUN'\n",
+      " 'NCRSMF' 'LAXWES' 'INHBLU' 'OHILEB' 'SEABLG' 'OKCSAL' 'KCYLEA' 'AWIOSH'\n",
+      " 'NYCJER' 'INHSBN' 'NCRROC' 'SEWPRO' 'OHICIR' 'AWISHE' 'INDCLO' 'NCRASH'\n",
+      " 'AIRCAM' 'LAUCLM' 'SEAOKH' 'SEWPEN' 'SEAMON' 'APCBEL' 'PHIVIN' 'DALGRE'\n",
+      " 'NMXFLA' 'LAXCAS' 'LAXIND' 'INDAND' 'SANWOO' 'DALCRS' 'LAXSNP' 'NORZIM'\n",
+      " 'INHDFN' 'PHIRDN' 'KCYCLI' 'KCYOTW' 'NOROWT' 'BOSHYA' 'PHIALL' 'FLNWAU'\n",
+      " 'NCRALB' 'ATHHAM' 'NNYUTI' 'AIRMAR' 'FLNKEH' 'MILLKM' 'BIRPEL' 'ATLOVB'\n",
+      " 'NORMAN' 'FLNKEN' 'FLNHNC' 'PITSOM' 'IPMMID' 'STLJOP' 'NCRHEN' 'CHILAS'\n",
+      " 'FLNLKC' 'FLNARC' 'ATLBRU' 'DETNOR' 'NORRDW' 'LAUTUP' 'AIRNEW' 'AIRGEO'\n",
+      " 'NCRSMI' 'FLNWIL' 'MILBUR' 'NCRSHE' 'KCYHES' 'HOUVIC' 'MINBLO' 'SEWMLF'\n",
+      " 'NCRSIC' 'OHIRAV' 'NSHSPR' 'IPMSAG' 'SEWKHF' 'CHIKAN' 'NMXPRE' 'KCYHNV'\n",
+      " 'STLROL' 'PHIBRI' 'DETWAS' 'NORFRM' 'NCROXF' 'AIRKIN' 'SFRCBL' 'AWIMAN'\n",
+      " 'PHIMIL' 'OHIWIL' 'NCRSAL' 'NMCGDJ' 'DALKAU' 'SFRWLC' 'NOLPIC' 'STLCPG'\n",
+      " 'SFRCON' 'DETADR' 'OHIMTV' 'DETBNH' 'STLCRD' 'STLHNB' 'NOLPOH' 'NMXYUM'\n",
+      " 'STLQUI' 'LAUHAT' 'SFRHAY' 'ATLPRR' 'ATLDBL' 'NNYBUR' 'CHIMTV' 'LAUGNW'\n",
+      " 'SHEYOR' 'SANROM' 'NORALX' 'IPMHOL' 'LAXPER' 'SANKER' 'OHIBCY' 'SHECAR'\n",
+      " 'NORFAR' 'NCRLUM' 'NCRHGP' 'INHCEL' 'CHIWAT' 'SEWHDR' 'ATLMDV' 'ATLWMP'\n",
+      " 'AIRHHI' 'BOSBRA' 'PITWEI' 'SFURED' 'VAHRAD' 'VAHROA' 'VAHWAY' 'VAHCHL'\n",
+      " 'VAHLYN' 'VAHMTN' 'VAHDAN' 'VAHSTA' 'OHIBUT' 'NCRMIL' 'CHIDEK' 'LAUBRO'\n",
+      " 'STLPIT' 'INHHIC' 'HOPNAN' 'APCWAR' 'NCRSAN' 'SEALEW' 'PHISCR' 'INHFIN'\n",
+      " 'INUEVA' 'APCLXT' 'SEABOI' 'OHHFAI' 'OHHMOR' 'OHHCHA' 'OHHASH' 'OHHHUN'\n",
+      " 'OHHCLA' 'NORFER' 'SEADAL' 'SFRFAI' 'ATLSEN' 'GCWBTR' 'GCWLAF' 'GCWGUL'\n",
+      " 'APCBET' 'STLPRB' 'SFRVAC' 'SFRRCM' 'INHKOK' 'LAWBUM' 'SLUSTG' 'LAUNAT'\n",
+      " 'NCRDNN']\n",
       "----------------------------------------------------------------\n",
-      "CreditRating: 7\n",
-      "sample: ['1-Highest' '4-Medium' '3-Good' '6-VeryLow' '2-High' '5-Low' '7-Lowest']\n",
+      "AreaCode: 197\n",
+      "sample: ['503' '412' '414' '918' '405' '210' '801' '502' '913' '316' '816' '303'\n",
+      " '610' '501' '515' '512' '317' '402' '615' '520' '214' '940' '817' '917'\n",
+      " '504' '612' '716' '617' '602' '419' '315' '314' '215' '425' '305' '206'\n",
+      " '205' '954' '812' '561' '509' '253' '916' '319' '360' '609' '208' '860'\n",
+      " '415' '510' '408' '518' '618' '201' '650' '313' '810' '908' '516' '203'\n",
+      " '914' '248' '401' '734' '603' '707' '781' '541' '703' '301' '606' '973'\n",
+      " '302' '903' '202' '925' '941' '410' '207' '732' '978' '413' nan '904'\n",
+      " '407' '850' '352' '765' '702' '813' '513' '614' '423' '937' '919' '901'\n",
+      " '281' '409' '336' '704' '970' '443' '740' '508' '719' '910' '912' '724'\n",
+      " '678' '312' '630' '847' '530' '216' '773' '435' '708' '330' '706' '440'\n",
+      " '573' '815' '808' '334' '804' '757' '601' '310' '909' '619' '714' '760'\n",
+      " '323' '818' '219' '949' '213' '562' '956' '626' '580' '915' '806' '832'\n",
+      " '505' '805' '540' '605' '304' '717' '608' '309' '785' '864' '828' '262'\n",
+      " '623' '480' '217' '843' '830' '661' '252' '517' '616' '803' '863' '636'\n",
+      " '856' '240' '831' '320' '254' '936' '361' '920' '507' '660' '763' '229'\n",
+      " '417' '775' '218' '662' '484' '321' '814' '651' '952' '469' '478' '701'\n",
+      " '870' '570' '225' '337' '228']\n",
       "----------------------------------------------------------------\n"
      ]
     }
@@ -2171,9 +2278,239 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0dcc64a5-16d0-45eb-a11b-0a66351b1549",
+   "metadata": {},
+   "source": [
+    "drop the CreditRating Column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "5eb510bd-10fe-4262-bada-19364003384e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.drop(columns=['CreditRating'], inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83015a6a-8e8b-4892-8fd0-3e69b186bc97",
+   "metadata": {},
+   "source": [
+    "<b>convert HandsetPrice to float, and Unknown values will be 'NaN'</b>\r\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "c7426cd0-264e-457f-94c4-80337d139c05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['HandsetPrice'] = pd.to_numeric(data['HandsetPrice'], errors='coerce')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31bda02f-ab5b-478d-a4e6-bc02d8d587d8",
+   "metadata": {},
+   "source": [
+    "<b>ServiceArea has 748 unique values, its not very practical to one-hot encode it. </b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "33823e31-e9c6-4b41-80b5-5d9c1b2f6bd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#extract the string part\n",
+    "data['City'] = data['ServiceArea'].str[:-3]\n",
+    "#extract the last three digits\n",
+    "data['AreaCode'] = data['ServiceArea'].str[-3:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "49f3f301-3592-4985-8679-83a57376987f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "737"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data['City'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "55ad7472-a783-4bd1-a325-d6938348714f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "197"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data['AreaCode'].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c32b5df-fde3-4fd4-8340-cb5e3c461558",
+   "metadata": {},
+   "source": [
+    "<b>attempt to perform frequency encoding </b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "82f1c0d1-d7fc-4c4b-9239-0ab59b93e472",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "city_counts = data['City'].value_counts()\n",
+    "data['SerivceArea_City_Frequency'] = data['City'].map(city_counts)\n",
+    "\n",
+    "area_code_counts = data['AreaCode'].value_counts()\n",
+    "data['ServiceArea_AreaCode_Frequency'] = data['AreaCode'].map(area_code_counts)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "e1892f0b-ca5c-48d4-960d-f165fec56147",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "data.drop(columns=['City_Frequency'], inplace=True)\n",
+    "data.drop(columns=['AreaCode_Frequency'], inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "c65cf8ae-aec9-4d98-998e-04305c45864e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 51047 entries, 3000002 to 3399994\n",
+      "Data columns (total 59 columns):\n",
+      " #   Column                          Non-Null Count  Dtype   \n",
+      "---  ------                          --------------  -----   \n",
+      " 0   Churn                           51047 non-null  bool    \n",
+      " 1   MonthlyRevenue                  50891 non-null  float64 \n",
+      " 2   MonthlyMinutes                  50891 non-null  float64 \n",
+      " 3   TotalRecurringCharge            50891 non-null  float64 \n",
+      " 4   DirectorAssistedCalls           50891 non-null  float64 \n",
+      " 5   OverageMinutes                  50891 non-null  float64 \n",
+      " 6   RoamingCalls                    50891 non-null  float64 \n",
+      " 7   PercChangeMinutes               50680 non-null  float64 \n",
+      " 8   PercChangeRevenues              50680 non-null  float64 \n",
+      " 9   DroppedCalls                    51047 non-null  float64 \n",
+      " 10  BlockedCalls                    51047 non-null  float64 \n",
+      " 11  UnansweredCalls                 51047 non-null  float64 \n",
+      " 12  CustomerCareCalls               51047 non-null  float64 \n",
+      " 13  ThreewayCalls                   51047 non-null  float64 \n",
+      " 14  ReceivedCalls                   51047 non-null  float64 \n",
+      " 15  OutboundCalls                   51047 non-null  float64 \n",
+      " 16  InboundCalls                    51047 non-null  float64 \n",
+      " 17  PeakCallsInOut                  51047 non-null  float64 \n",
+      " 18  OffPeakCallsInOut               51047 non-null  float64 \n",
+      " 19  DroppedBlockedCalls             51047 non-null  float64 \n",
+      " 20  CallForwardingCalls             51047 non-null  float64 \n",
+      " 21  CallWaitingCalls                51047 non-null  float64 \n",
+      " 22  MonthsInService                 51047 non-null  int64   \n",
+      " 23  UniqueSubs                      51047 non-null  int64   \n",
+      " 24  ActiveSubs                      51047 non-null  int64   \n",
+      " 25  Handsets                        51046 non-null  float64 \n",
+      " 26  HandsetModels                   51046 non-null  float64 \n",
+      " 27  CurrentEquipmentDays            51046 non-null  float64 \n",
+      " 28  AgeHH1                          50138 non-null  float64 \n",
+      " 29  AgeHH2                          50138 non-null  float64 \n",
+      " 30  ChildrenInHH                    51047 non-null  bool    \n",
+      " 31  HandsetRefurbished              51047 non-null  bool    \n",
+      " 32  HandsetWebCapable               51047 non-null  bool    \n",
+      " 33  TruckOwner                      51047 non-null  bool    \n",
+      " 34  RVOwner                         51047 non-null  bool    \n",
+      " 35  Homeownership_Known             51047 non-null  bool    \n",
+      " 36  BuysViaMailOrder                51047 non-null  bool    \n",
+      " 37  RespondsToMailOffers            51047 non-null  bool    \n",
+      " 38  OptOutMailings                  51047 non-null  bool    \n",
+      " 39  NonUSTravel                     51047 non-null  bool    \n",
+      " 40  OwnsComputer                    51047 non-null  bool    \n",
+      " 41  HasCreditCard                   51047 non-null  bool    \n",
+      " 42  RetentionCalls                  51047 non-null  int64   \n",
+      " 43  RetentionOffersAccepted         51047 non-null  int64   \n",
+      " 44  NewCellphoneUser                51047 non-null  bool    \n",
+      " 45  NotNewCellphoneUser             51047 non-null  bool    \n",
+      " 46  ReferralsMadeBySubscriber       51047 non-null  int64   \n",
+      " 47  IncomeGroup                     51047 non-null  int64   \n",
+      " 48  OwnsMotorcycle                  51047 non-null  bool    \n",
+      " 49  AdjustmentsToCreditRating       51047 non-null  int64   \n",
+      " 50  HandsetPrice                    22065 non-null  float64 \n",
+      " 51  MadeCallToRetentionTeam         51047 non-null  bool    \n",
+      " 52  PrizmCode                       51047 non-null  category\n",
+      " 53  Occupation                      51047 non-null  category\n",
+      " 54  MaritalStatus                   51047 non-null  category\n",
+      " 55  CreditRating_Numeric            51047 non-null  int64   \n",
+      " 56  CreditRating_Label              51047 non-null  category\n",
+      " 57  SerivceArea_City_Frequency      51023 non-null  float64 \n",
+      " 58  ServiceArea_AreaCode_Frequency  51023 non-null  float64 \n",
+      "dtypes: bool(17), category(4), float64(29), int64(9)\n",
+      "memory usage: 16.2 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "a34a828b-df50-4387-81d9-5922545b533f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for column in data.columns:\n",
+    "    if data.dtypes[column] == 'object':\n",
+    "        print(f\"{column}: {len(data[column].unique())}\")\n",
+    "        print(f\"sample: {data[column].unique()}\")\n",
+    "        print(\"----------------------------------------------------------------\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7426cd0-264e-457f-94c4-80337d139c05",
+   "id": "891396c5-8d66-40d0-82b3-094c48ee8675",
    "metadata": {},
    "outputs": [],
    "source": []
